--- a/src/BoardZ/assets/translations/en-US.json
+++ b/src/BoardZ/assets/translations/en-US.json
@@ -37,7 +37,7 @@
     "language": "Language",
     "languages": {
       "enUS": "English",
-      "deDE": "Deutsch"
+      "deDE": "Italian"
     }
   },
   "login": {
